--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -128,30 +128,19 @@ Alias Example:
 ==== Listing all persons : `list`
 
 Shows a list of persons in the address book. +
-Format: `list [m/MODE] [tag/TAG]`
+Format: `list`
 
-****
-* MODE can be either "recent", "frequent" or "tag". If MODE is set to "tag", the field [tag/TAG] must also be included.
-* If the [m/MODE] field is empty, a list of all persons is shown
-* Using MODE = "recent" will return a list of the 5 most recently accessed entries
-* Using MODE = "frequent" will return a list of the 5 most frequently accessed entries
-* Using MODE = "tag" will return a list of all person that are tagged with TAG
-****
+A list of all persons is shown.
 
 Examples:
 
 * `list` +
 Lists all persons.
 
-* `list m/recent` +
-Lists the 5 most recently accessed entries.
-
-* `list m/tag tag/work` +
-Returns a list of all persons tagged with "work"
 
 Alias example:
 
-* `l m/recent`
+* `l`
 
 ==== Locating persons by name: `find`
 
