--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -307,6 +307,9 @@ Deletes the 2nd and 3rd persons in the address book.
 `delete 1` +
 Deletes the 1st person in the results of the `find` command.
 
+.Deleted person at first index i.e. Alex Yeoh
+image::delete-by-index-command-result.png[width="1000"]
+
 ===== Deleting persons by tag [Since v1.4]:
 
 Deletes person(s) that have a the input tags. +
@@ -328,6 +331,7 @@ Deletes all persons with the tags `school` or `work`
 Clears all entries from the address book. +
 Command format: `clear`
 
+.Cleared all entries
 image::clear-command.png[width="350"]
 
 === Navigating KayPoh!
