--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -77,7 +77,7 @@ Examples:
 
 Shows a list of all persons in the address book. +
 Format: `list`
-
+// tag::edit[]
 === Editing a person : `edit`
 `v1.3` Autofill replaces all empty fields at once +
 `v1.2` Only Name field necessary +
@@ -103,7 +103,7 @@ Edits the phone number and email address of the 1st person to be `91234567` and 
 Edits the name of the 2nd person to be `Betsy Crower`, clears all existing tags and add the cute tag.
 * `edit 1 n/` +
 Triggers the programme to autofill the name into the prefix becoming `edit 1 n/Betsy Crower`
-
+// end::edit[]
 === Locating persons by name: `find`
 
 Finds persons whose names contain any of the given keywords. +
