--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -186,9 +186,10 @@ _Figure 2.2.2.2: Structure of Commands in the Logic Component. This diagram show
 *API* :
 link:{repoURL}/src/main/java/seedu/address/logic/Logic.java[`Logic.java`]
 
-The logic will perform the following steps:
+Figure 2.2.2.1 shows the structure of the `Logic` component. The `LogicManager` firstly calls the `AddressBookParser` to parse the user input.
 
-.  `Logic` uses the `AddressBookParser` class to parse the user command.
+
+
 .  This results in a `Command` object which is executed by the `LogicManager`.
 .  The command execution can affect the `Model` (e.g. adding a person) and/or raise events.
 .  The result of the command execution is encapsulated as a `CommandResult` object which is passed back to the `Ui`.
